# zk-token-bridge

./: .gitignore  Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml  build.rs
host/src/: main.rs
