[package]
name = "bridge-host"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
ed25519-dalek = { version = "1", features = ["rand", "serde"] }
rand = "0.8"

[build-dependencies]
risc0-build = "0.19"
